  ###################################
##### Changed in Scannomatic 0.992 #####
   ###################################

*** Analyse One allows for measures in both spaces and using any fixture
    to find grayscale.

*** Fixture respond to what fixture is selected in start experiment!

*** Fixture no longer causes file-crash if conf-file not correct.

*** Fixture creation no longer requires program restart(s) to work properly

*** Added XML-short form and omission of data from XML file that is
    not of interest.

*** Implemented a termination button

*** Implemented support for several scanners connected to same computer
    run in both on and several instances of the program

*** Started using logging for better debugging. Also removes bugs that way.

*** Revamped grayscale detection since it apparently wasn't stable enough.

*** Implemented a project analysis gui

*** Corrected bug in fixture-gui

*** Start experiment GUI now understands fixtures and the analysis script 
    by default use these to determine pinning matrices. A copy of the config 
    file as it was at the time of scanning is also copied to the directory.

*** Made GUI-function DMS redirect upwards towards scannomatic

*** Fixture view is now decent.

*** User guide for setting up experiment putting plates in right positions
    implemented.

*** Fixture GUI view is better now... not yet perfect

*** Implemented grid-lock, that once set the grid stays where it is relative
    to plate edges (this is probably less robust if plates are moved within
    the fixture, but will probably produce less noise if plates stay in place)

*** The identifier property of analysis-objects now is build as follows as
    far as is applicable to a certain object:

        [[time_index, plate], [row, column], cell-item]


  ###################################
##### Changed in Scannomatic 0.991 #####
   ###################################

*** Most files were renamed for better structure: